--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-
-<html>
+<!DOCTYPE html>
+  <html>
   <head>
+  <body>
   <title> What I have learned during Quarantine </title>
   </head>
   <body>
