--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
   <html>
   <head>
-    <title> What I have learned during Quarantine </title>
   <body>
+    <title> What I have learned during Quarantine </title>
+    </head>
+    </body>
     <h1>
       About Me
     </h1>
