--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-  <html>
-  <head>
-  <body>
-    <title> What I have learned during Quarantine </title>
-    </head>
-    </body>
+<html>
+<head>
+<title>What I Have Learned in Quarantine</title>
+</head>
+<body>
     <h1>
       About Me
     </h1>
