--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
+What I Have Learned in Quarantine
 <!DOCTYPE html>
 <html>
 <head>
-<title>What I Have Learned in Quarantine</title>
 </head>
 <body>
     <h1>
