--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ What I Have Learned in Quarantine
 </head>
 <body>
     <h1>
-      About Me
+What I Have Learned in Quarantine
     </h1>
       <p>
     There are many things that I have learned in Quaratine and this time has made me reflect on my life and my 
