--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ What I Have Learned in Quarantine
     <h1>
 What I Have Learned in Quarantine
     </h1>
+    <h3>
+        About Me
+    </h3>
       <p>
     There are many things that I have learned in Quaratine and this time has made me reflect on my life and my 
     </p>
