--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+    </head>
 <body>
     <h1>
 What I Have Learned in Quarantine
