--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@ What I Have Learned in Quarantine
       <p>
     There are many things that I have learned in Quaratine and this time has made me reflect on my life and my 
     </p>
-    
+    </body>
