--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
 <body>
+    <div class="idk">
+  <a class="active" href="#Home"><b>Home</b></a>
+  <a class="live" href="#Me">About Me</a>
+  <a class="love" href="#ToDo"> Things to do</a>
+  <a class="laugh" href="#Leanrned">Learned</a>
+</div>
     <h1>
 What I Have Learned in Quarantine
     </h1>
@@ -13,13 +19,4 @@ What I Have Learned in Quarantine
       <p>
     There are many things that I have learned in Quaratine and this time has made me reflect on my life and my 
     </p>
-    
- <div class="w3-content">
- <img class="mySlides" src="https://i.imgur.com/ZtdhrUA.jpg" alt="custom_html_banner1" style="width:100%">
- <img class="mySlides" src="https://i.imgur.com/ZtdhrUA.jpg" alt="custom_html_banner2" style="width:100%">
- <img class="mySlides" src="https://i.imgur.com/ZtdhrUA.jpg" alt="custom_html_banner3" style="width:100%">
- <img class="mySlides" src="https://i.imgur.com/ZtdhrUA.jpg" alt="custom_html_banner4" style="width:100%">
- <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
- <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
-</div>
     </body>
