--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <div class="idk">
   <a class="active" href="#Home"><b>Home</b></a>
   <a class="live" href="#Me">About Me</a>
+        <a class="live" herf= https://surabhisph.github.io/What-I-have-Learned-in-Quaranite-/#Me>About Me</a>
   <a class="love" href="#ToDo"> Things to do</a>
   <a class="laugh" href="#Leanrned">Learned</a>
 </div>
