--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
 <body>
     <div class="idk">
   <a class="active" href="#Home"><b>Home</b></a>
-        <div>
-    <button class="live"> About Me </button>
-            <a herf = "https://surabhisph.github.io/What-I-have-Learned-in-Quaranite-/About_Me.html"></a>     
-        </div>
+        <a class="live" href="#Me> About Me </a>
   <a class="love" href="#ToDo"> Things to do</a>
   <a class="laugh" href="#Leanrned">Learned</a>
 </div>
