--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
     <div class="idk">
   <a class="active" href="#Home"><b>Home</b></a>
-        <a class="live" href="#Me> About Me </a>
+   <a class ="live" href="#Me"> About Me </a>
   <a class="love" href="#ToDo"> Things to do</a>
-  <a class="laugh" href="#Leanrned">Learned</a>
+  <a class="laugh" href="#Learned">Learned</a>
 </div>
     <h1>
 What I Have Learned in Quarantine
