--- a/About_Me.html
+++ b/About_Me.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="aboutme.css">
+    </head>
+<body>
+  <p> hi this is about me!!
+  </p>
+  
