--- a/index.html
+++ b/index.html
@@ -13,4 +13,16 @@
     <h1>
 What I Have Learned in Quarantine
     </h1>
+    <div class= "thing1">
+        <div class="aboutme">
+            filler words
+        </div>
+        <div class = "todo">
+            filler words
+        </div>
+        <div class = "learned">
+            filler words
+        </div>
+    </div>
     </body>
+        </html>
