--- a/About_Me.html
+++ b/About_Me.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="aboutme.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 <body>
+        <div class="idk">
+  <a class="active" href="#Home"><b>Home</b></a>
+   <a class ="live" href=https://surabhisph.github.io/What-I-have-Learned-in-Quaranite-/About_Me.html> About Me</a>
+  <a class="love" href="#ToDo"> Things to do</a>
+  <a class="laugh" href="#Learned">Learned</a>
+</div>
   <p> hi this is about me!!
   </p>
   
