--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="style.css">
     </head>
 <body>
     <div class="idk">
-   <a class="active" href="https://surabhisph.github.io/What-I-have-Learned-in-Quaranite-/home.html"><b>Home</b></a>
-   <a class ="live" href=https://surabhisph.github.io/What-I-have-Learned-in-Quaranite-/About_Me.html> About Me</a>
-  <a class="love" href="https://surabhisph.github.io/What-I-have-Learned-in-Quaranite-/todo.html"> Things to do</a>
-  <a class="laugh" href="https://surabhisph.github.io/What-I-have-Learned-in-Quaranite-/learned.html">Learned</a>
-</div>
+  <a class="active" href="#Home"><b>Home</b></a>
+  <a class="live" href="#Me">About Me</a>
+  <a class="love" href="#ToDo"> Things to do</a>
+  <a class="laugh" href="#Leanrned">Learned</a>
 </div>
     <h1>
 What I Have Learned in Quarantine
