--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-   <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style.css">
     </head>
 <body>
     <div class="idk">
-  <a class="active" href="#Home"><b>Home</b></a>
-  <a class="live" href="#Me">About Me</a>
-  <a class="love" href="#ToDo"> Things to do</a>
-  <a class="laugh" href="#Leanrned">Learned</a>
+  <a class="active" href="#home"><b>Home</b></a>
+  <a class="live" href="#aboutme">About Me</a>
+  <a class="love" href="#todo"> Things to do</a>
+  <a class="laugh" href="#learned">Learned</a>
 </div>
     <h1>
-What I Have Learned in Quarantine
-    </h1>
+What I Have Learned in Quarantine   </h1>
     <div class= "thing1">
-        <div class="aboutme">
+       <p id="home">
+            filler words
+        </p>
+        <p id="aboutme">
+            filler words
+        </p>
+        <div id = "todo">
             filler words
         </div>
-        <div class = "todo">
+        <p id = "learned">
             filler words
-        </div>
-        <div class = "learned">
-            filler words
-        </div>
+        </p>
     </div>
     </body>
         </html>
