--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <a class="laugh" href="#learned">Learned</a>
 </div>
     <h1>
-What I Have Learned in Quarantine   </h1>
+Quarantine  
+    </h1>
     <div class= "thing1">
        <p id="home">
             filler words
